# daisa

./: daisa.txt  main.cpp  meson.build
core/: daisa_test.cpp  meson.build
core/include/: daisa.hpp
core/include/daisa/: instruction.hpp  isa.inc  types.hpp
daisa/: daisa.cpp  daisa.hpp  daisa_test.cpp  meson.build
daisa/include/daisa/: instruction.hpp
interpreter/: meson.build
interpreter/src/: interp.cpp  interp.hpp  main.cpp  types.hpp
subprojects/daisa/: daisa.cpp  daisa_test.cpp  meson.build
subprojects/daisa/include/daisa/: instruction.hpp  isa.inc  types.hpp
subprojects/daisa/include/daisa/assembler/: instruction.hpp
